--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ go:
 env:
   - GO111MODULE=on DOCKER_CLI_EXPERIMENTAL=enabled
 
+before_install:
+  - sudo apt-get update && sudo apt-get -y install jq
+
 install: true
 
 script:
@@ -23,5 +26,5 @@ script:
 
 after_success:
   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-  - docker run --rm --privileged multiarch/qemu-user-static:register
+  - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
   - make manifest && make manifest-latest
